# pd

./: docker-compose.yaml  pyproject.toml
backend/: .env_temlplate  main.py
backend/alembic/: env.py
backend/core/: config.py
backend/core/models/: base.py  db_helper.py
backend/core/models/mixins/: int_id_pk.py
frontend/app/: package.json
